<resources>

    <string name="term_text">By clicking Sign In, You acknowledge that you have read and agreed to our Terms of Use</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="talismanPi">Talisman PI</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="appName">TalismanPI</string>
    <string name="recent_calls">Recent Calls</string>
    <string name="customers">Customers</string>
    <string name="tickets">Tickets</string>
    <string name="sort_by">Sort By</string>
    <string name="newText">New</string>
    <string name="open">Open</string>
    <string name="clear">Clear</string>
    <string name="closed">Close</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="all">All</string>
</resources>
