<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sortBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/sort_by"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/newText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sortBy"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/newText"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newText"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/open"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/open"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/clear"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/close"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/closed"
        android:textSize="16sp" />

</RelativeLayout>