<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:id="@+id/progressBar"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/login_logo_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/talisman_pi_logo"
        android:visibility="visible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:gravity="center"
        android:text="@string/term_text"
        android:textColor="@color/white_color" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_24"
            android:layout_marginRight="@dimen/margin_24">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/login_email_icon"
                android:drawablePadding="@dimen/margin_12"
                android:inputType="textEmailAddress"
                android:hint="@string/email_id"
                android:singleLine="true"
                android:textColor="@color/white_light_color"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailTextInput"
            android:layout_marginLeft="@dimen/margin_24"
            android:layout_marginRight="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_16">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/password_icon"
                android:drawablePadding="@dimen/margin_12"
                android:hint="@string/password"
                android:singleLine="true"
                android:textColor="@color/white_light_color"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordTextInput"
            android:layout_marginLeft="@dimen/margin_24"
            android:layout_marginRight="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@drawable/green_curved_rectangle"
            android:text="@string/login"
            android:textColor="@color/white_color"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="center"
            android:lineSpacingExtra="2dp"
            android:text="@string/forgot_password"
            android:textColor="@color/green_color"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>


</RelativeLayout>